# nemesys

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md  alu.v  alu_tb.v  cpu.v  defines.vh  isa.md  regbank.v  regbank_tb.v
docs/: ISA.md
src/filter_lists/: cc_filter.txt  opcode_filter.txt  operand_filter.txt  reg_filter.txt
src/rtl/: CMakeLists.txt  alu.v  alu_tb.v  alu_unit.v  cpu.v  cpu_tb.v  decoder.v  decoder_unit.v  defines.vh  instr_mem.v  pc_cntrl.v  pc_cntrl_tb.v  regbank.v  regbank_tb.v
test/rtl/: CMakeLists.txt  alu_tb.v  cpu_tb.v
